# tts-chatterbox

./: .gitignore  pyproject.toml
data/: text.txt
prompts/: chapter-to-xml.txt
src/: __main__.py  combine-audio.py  main.py
src/pipelines/: p01_generate_voice_references.py  p02_create_clone_prompts.py  p03_synthesize_chapter.py  p04_assemble_chapter.py
src/utils/: audio.py  config.py  models.py  text.py
