[project]
name = "tts-chatterbox"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "chatterbox-tts>=0.1.6",
    "numpy==1.25.2",
    "ml_dtypes>0.5.0",
    "setuptools>=70.2.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
