[project]
name = "tts-chatterbox"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "chatterbox-tts>=0.1.6",
    "numpy==1.25.2",
    "ml_dtypes>0.5.0",
    "setuptools>=70.2.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "openai-whisper",
    "pyrnnoise>=0.4.3",
    "auto-editor>=29.3.1",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
#torch = { index = "pytorch" }
#torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
